src/test/ui/consts/const-mut-refs/feature-gate-const_mut_refs.stderr
error[E0723]: mutable references in const fn are unstable
  --> $DIR/feature-gate-const_mut_refs.rs:5:14
   |
LL | const fn foo(x: &mut i32) -> i32 {
   |              ^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
